Remove the need for Insider SAS token in Create Container wizard and Create AL-Go repo wizard
Add parameter EnableExternalRulesets to Run-AlPipeline (which will be added to the compiler when compiling)
Issue https://github.com/microsoft/AL-Go/issues/709 Include unknown app dependencies from previous apps (which doesn't already exist in unknown app dependencies)

5.0.7
Run-AlValidation also needs to install NAVSIP dependencies (issue #3190)
Performance problems when getting application information in Compile-AppWithCompilerFolder

5.0.6
Add switch "doNotGetCompanyInfo" to "New-BcEnvironment" to enable skipping getting environment information after environment creation.
Issue #3151 Get-AppSourceProduct returns 404 Not Found
Add parameters exclusiveAccessTicket, path, syncMode, force and skipVersionCheck to Start-BcContainerAppDataUpgrade.
Issue #3146 Publish-BcContainerApp not working headless
Issue #3190 Sign-Tool stopped working in 23.0.12034.12480

5.0.5
Add new option (exitedContainers) on Flush-ContainerHelperCache. Note that exited containers are NOT remove by the all flag, you need all,exitedContainers
Add resilience to Remove-BcContainerSession
Issue #3116 Publish-NavContainerApp: Exception setting "ServerCertificateCustomValidationCallback": "Cannot convert the "static bool DisabledServerCertificateValidationCallback
Add new parameter -useEnvironmentUpdateWindow to Install-BcAppFromAppSource, to schedule installation of apps to run inside update window
Issue #3118 Docker Pull sends recommendations on the error stream on PowerShell 5
Support building using CompilerFolder on Linux (even when the Linux version of ALC isn't included in the ALLanguage vsix)
Support latest or preview as "magic" values for VsixFile parameter Run-AlPipeline, Run-AlValidation, New-BcContainer and New-BcCompilerFolder) to always get latest or preview marketplace version

5.0.4