@@ -23,12 +23,7 @@ function invoke-gh {
             $arguments += "$_ "
         }
     }
-    try {
-        cmdDo -command gh -arguments $arguments -silent:$silent -returnValue:$returnValue -inputStr $inputStr
-    }
-    catch [System.Management.Automation.MethodInvocationException] {
-        throw "It looks like GitHub CLI is not installed. Please install GitHub CLI from https://cli.github.com/"
-    }
+    cmdDo -command gh -arguments $arguments -silent:$silent -returnValue:$returnValue -inputStr $inputStr
 }
 
 Export-ModuleMember -Function Invoke-gh
