@@ -23,11 +23,6 @@ function invoke-git {
             $arguments += "$_ "
         }
     }
-    try {
-        cmdDo -command git -arguments $arguments -silent:$silent -returnValue:$returnValue -inputStr $inputStr
-    }
-    catch [System.Management.Automation.MethodInvocationException] {
-        throw "It looks like Git is not installed. Please install Git from https://git-scm.com/download"
-    }
+    cmdDo -command git -arguments $arguments -silent:$silent -returnValue:$returnValue -inputStr $inputStr
 }
 Export-ModuleMember -Function Invoke-git
